--- a/css/custom.css
+++ b/css/custom.css
@@ -298,7 +298,7 @@ font-size: 15px;
 font-weight: 700;
 }
 .greenicons a i{
-    font-size: 50px;
+    font-size: 40px;
 }
 .greenicons a img{
         transform: rotate(46deg);
@@ -387,6 +387,78 @@ font-weight: 700;
 }
 .leftside-col p{
     margin-bottom: 12px;
+        color: #368129;
+    font-weight: 500;
+}
+.leftside-col p i{    
+        color: #828282;
+   
+}
+.bgtextaera{
+    height: 310px;
+    width: 100%;
+    border:1px solid #ccc;
+    resize: none;
+}
+.grpspan{
+        padding: 10px;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    margin-top: 27px;
+    border-radius: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.grpspan span{
+        padding: 10px;
+}
+.modalcontent span i{
+        font-size: 25px;
+    color: #368129;
+    margin-right: 10px;
+}
+.modal-title{
+    background-color: #000;
+    color: #fff;
+    width: 94%;
+    border-radius: 5px;
+    padding: 0 11px;
+    font-size: 17px;
+}
+.btn-default, .btn-default:hover, .btn-default:active{
+    background-color: #c7c7c7 !important;
+    border: #c7c7c7 !important;
+    padding: 7px 28px;
+    text-shadow: 0px 1px #fff;
+    color: #212121;
+    font-size: 10px;
+    text-transform: none;
+}
+.btn-default:focus{
+    box-shadow: none;
+}
+.modal-header .modal-close{
+    padding: 0px 4px 5px 3px;
+    margin: -34px -34px 0px 0px;
+    background-color: #368129;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 25px;
+    line-height: 16px;
+    opacity: 1;
+    border: 2px solid #fff;
+}
+.formmodal, .formmodal span i{
+        font-size: 18px;
+    letter-spacing: 0;
+    font-weight: 700;
+    color: #696969;
+    margin-bottom:0;
+    margin-top: 15px;
+}
+.modalmainbox .modalcontent span img{
+        transform: rotate(46deg);
+        margin-right: 15px;
 }
 
 /*Resopnsives*/
