--- a/css/custom.css
+++ b/css/custom.css
@@ -96,6 +96,7 @@
 }
 .share-ico a i{
     font-size: 27px;
+    vertical-align: middle;
 }
 .grade-boxtwo h2{
     font-size: 35px;
@@ -151,6 +152,7 @@ a:hover, a:focus, a:active {
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 5px;
+    text-align: center;
 }
 .smile span, .meh span, .frown span{
     color: #368129;
@@ -214,6 +216,7 @@ a:hover, a:focus, a:active {
 .boxbtm-ico a i{
     text-align: center;
     font-size: 25px;
+        vertical-align: middle;
 }
 .accordion-toggle.bigaccordion:after{
     float: right;
@@ -483,6 +486,16 @@ button.close, button.close:hover{
 #sbarlogo{
     display: none;
 }
+.img-responsive{
+    width: 100%;
+}
+
+
+
+
+
+
+
 /*Resopnsives*/
 @media (max-width: 990px) {
   #header #header-wrap #logo a > img {
@@ -508,9 +521,10 @@ button.close, button.close:hover{
 }
 .xs-xcol{
     width: auto;
+    margin:8px;
 }
 .p-0, .tipsfromtechers p, .tipsfromtechers h5{
-    padding-left: 15px !important;
+    padding-left: 15px;
 }
 .resourceside .math-grade{
     margin-top: 0 !important;
@@ -523,4 +537,109 @@ button.close, button.close:hover{
     width: 50%;
     margin-top: 15px;
 }
+.draftcontent p{
+    font-size: 12px;
+}
+
+}
+@media (max-device-width : 480px) {
+.mathematics-span, .grade-span, .accordion-toggle.bigaccordion:after{
+    font-size: 13px;
+}
+.theresourcebox h3{
+    font-size: 17px;
+}
+.theresourcebox .panel-heading p, .theresourcebox .panel-body li, .panel-heading .accordion-toggle.bigaccordion{
+    font-size: 15px;
+}
+.xs-28{
+    width: 38%;
+}
+.panel-heading .accordion-toggle.bigaccordion{
+        padding: 0 0 0 9px;
+}
+.p-0, .tipsfromtechers p, .tipsfromtechers h5{
+    padding-left: 0;
+    
+}
+.optionicons .boxbtm-ico:nth-child(3){
+    margin:10px 20px ;
+}
+.submit-bar{
+    padding-left: 15px;
+}
+.clam-content{
+    padding-left: 15px !important;
+}
+.resourceside .math-grade{
+    margin-bottom: 12px;
+    margin-left: 0;
+}
+.resourceside{
+    padding-left: 10px;
+}
+.share-ico{
+    width: 25%;
+    margin: 20px 0;
+}
+.percol{
+    width: auto;
+}
+
+}
+@media  (min-device-width : 768px){
+.mathematics-span, .grade-span, .accordion-toggle.bigaccordion:after{
+    font-size: 10px;
+}
+.share-ico:nth-child(1){
+   display: none !important;   
+}
+.share-ico {
+    width: 100%;
+    margin: 18px 17px;
+}
+.grade-boxtwo h2, .grade-boxtwo h4, .panel-heading .accordion-toggle.bigaccordion, .theresourcebox .panel-heading p, .theresourcebox .panel-body li {
+    font-size: 15px;
+}
+.percol {
+width: auto;    
+    margin: 0px;
+}
+.xs-xcol {
+    width: auto;
+    margin: 13px 16px;
+}
+.greenicons .xs-28 {
+    width: 33%;
+    margin: 6px 15px;
+}
+.greenicons a {   
+    font-size: 13px;
+    }
+    .greenicons a i {
+    font-size: 30px;
+}
+.greenicons a img{
+    width: 35px;
+    margin-left: 10px;
+}
+.resourceside h5, .resourceside p, .tipsfromtechers p, .tipsfromtechers h5 {
+    padding-left: 0;
+}
+.resourceside .mathematics-span, .resourceside .grade-span{
+    font-size: 10px;
+}
+.resourceside .math-grade{
+    margin-left: 0;
+}
+.submit-bar {
+    padding-left: 15px;
+}
+
+
+
+}
+@media  (min-device-width : 992px){
+    .greenicons a i{
+    font-size: 40px;
 }
