--- a/css/custom.css
+++ b/css/custom.css
@@ -13,7 +13,9 @@
     color: #000;
     font-weight: 600;
     left: 70px;
-    width: 100%;
+    width: max-content;
+    -webkit-transition-width:100;
+   
 }
 .username span.fa{
     font-weight: 200;
