--- a/css/custom.css
+++ b/css/custom.css
@@ -521,7 +521,7 @@ button.close, button.close:hover{
 		}
 		.share-ico {
 			width: auto;
-			margin: 18px 17px !important;
+			margin: 18px 17px;
 		}
 		.greenicons a.userway-font24, .greenicons a.userway-font20, .boxbtm-ico a.userway-font20, .share-ico a.userway-font22, .greenicons a.userway-font26, .boxbtm-ico a.userway-font22, .share-ico a.userway-font24{
 			word-break: break-word;
@@ -598,18 +598,19 @@ button.close, button.close:hover{
 				.draftcontent p{
 					font-size: 12px;
 				}
-
 			}
 			@media  (min-device-width : 768px){
 				.mathematics-span, .grade-span, .accordion-toggle.bigaccordion:after{
 					font-size: 10px;
 				}
-				.share-ico:nth-child(1){
-					display: none ;   
+				.share-ico:nth-child(1), .share-ico.empty{
+					display: none; 
+					margin: 0;
+					padding:0; 					
 				}
 				.share-ico {
 					width: auto;
-					margin: 18px 0px;
+					margin: 18px 10px;
 				}
 				.grade-boxtwo h4, .panel-heading .accordion-toggle.bigaccordion, .theresourcebox .panel-heading p, .theresourcebox .panel-body li {
 					font-size: 15px;
@@ -647,6 +648,11 @@ button.close, button.close:hover{
 				}
 				.submit-bar {
 					padding-left: 15px;
+				}
+			}
+			@media  (max-device-width : 767px){
+				.share-ico.empty{
+					display: none;
 				}
 			}
 			@media (max-device-width : 480px) {
