--- a/css/style.css
+++ b/css/style.css
@@ -2965,7 +2965,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Montserrat", "Helvetica", "Arial", sans-serif !important;
-  color: #000000;
+/*   color: #000000; */
   font-weight: 400; }
 
 h1,
