--- a/css/custom.css
+++ b/css/custom.css
@@ -388,7 +388,7 @@ strong, .differentiation{
 }
 .draftcontent p{
 	color: #ffffff;
-	font-size: 10px;
+/* 	font-size: 10px; */
 	margin-bottom: 0;
 }
 .footerlogo img{
