--- a/css/custom.css
+++ b/css/custom.css
@@ -132,9 +132,10 @@
 	cursor: pointer;
 }
 a:hover, a:focus {
-	text-decoration: none;
+	text-decoration: underline;
 	outline: none;
 	color: #368129;
+
 }
 .morelink{
 	color: #000;
