--- a/css/custom.css
+++ b/css/custom.css
@@ -133,9 +133,9 @@
 }
 a:hover, a:focus {
 	text-decoration: underline;
-	background-color: #000;
+	background-color: black;
 	outline: none;
-	color: #368129;
+	color: white;
 
 }
 .morelink{
