--- a/css/custom.css
+++ b/css/custom.css
@@ -378,7 +378,7 @@ strong, .differentiation{
 }
 
 .footerbottom{
-	background-color: #4a4a4a;
+	background-color: black;
 	color: #ffffff;
 }
 .draftcontent h3{
