--- a/css/custom.css
+++ b/css/custom.css
@@ -378,7 +378,7 @@ strong, .differentiation{
 }
 
 .footerbottom{
-	background-color:darkgrey;
+	background-color:rgb(42, 42, 42);
 	color: #ffffff;
 }
 .draftcontent h3{
@@ -386,12 +386,14 @@ strong, .differentiation{
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-bottom: 5px;
+	background-color: rgb(42, 42, 42);
 	/*font-size: 35px;*/
 }
 .draftcontent p{
 	color: white;
 /* 	font-size: 10px; */
 	margin-bottom: 0;
+	background-color: rgb(42, 42, 42);
 }
 .footerlogo img{
 	filter: brightness(0) invert(1);
