--- a/css/custom.css
+++ b/css/custom.css
@@ -104,13 +104,14 @@
 	font-size: 27px;
 	vertical-align: middle;
 }
-.grade-boxtwo h2{
+.grade-boxtwo strong.cf-content{
 	font-size: 35px;
 	font-weight: 700;
 	color: #000;
 	text-transform: uppercase;
 	margin-bottom: 15px;
 	letter-spacing: 0.5px;
+	line-height: 38px;
 }
 .grade-boxtwo h4{    
 	font-weight: 800;
@@ -479,7 +480,7 @@ button.close, button.close:hover{
 	transform: rotate(46deg);
 	margin-right: 15px;
 }
-.breadcrumbs h2{
+.breadcrumbs strong.for-content{
 	display: none;
 }
 .fruits-img img{
@@ -528,7 +529,7 @@ button.close, button.close:hover{
 			margin: 18px 17px;
 		}
 		.greenicons a.userway-font24, .greenicons a.userway-font20, .boxbtm-ico a.userway-font20, .share-ico a.userway-font22, .greenicons a.userway-font26, .boxbtm-ico a.userway-font22, .share-ico a.userway-font24{
-			word-break: break-word;
+			word-wrap:break-word;
 		}
 		#mainMenu nav > ul > li.userway-font22:last-child{
 			margin-right: 25px;
@@ -559,7 +560,7 @@ button.close, button.close:hover{
 			font-weight: 700;
 		}
 		.greenicons a.userway-font16{
-			word-break: break-word;
+			word-wrap: break-word;
 		}
 	}
 	@media (max-width: 990px) {
