--- a/css/custom.css
+++ b/css/custom.css
@@ -355,7 +355,7 @@ strong, .differentiation{
 	color: #4a4a4a;
 	letter-spacing: 0px;	
 }
-.tipsfromtechers h4{
+.tipsfromtechers strong.relatedcont{
 	color: #4a4a4a;
 	letter-spacing: 0px;
 	font-size: 25px;
